--- a/content/articles/i18n/i18n - intr.mdx
+++ b/content/articles/i18n/i18n - intr.mdx
@@ -1,11 +1,9 @@
 ---
-title: 'Internationalization (i18n)'
+title: 'Introduction to Internationalization (i18n)'
 description: 'Learn how to set up internationalization in your Next.js project.'
 category: 'i18n'
 createdAt: '2024-10-19'
 ---
-
-# Introduction to Internationalization (i18n)
 
 Internationalization, or **i18n**, is the process of preparing your application to support multiple languages and regions. In this guide, we'll walk you through how to add i18n to your Next.js project using built-in tools and best practices.
 
