--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -196,6 +196,6 @@
   "experience5Description": "Oversaw food service operations and personnel management at large-scale events. Successfully managed teams of over 100 staff, ensuring seamless service delivery.",
   "experience6Period": "Apr 2016 - Jul 2016",
   "experience6Title": "Marketing Intern at RFPL",
-  "experience6Description": "Contributed to marketing initiatives for the Russian Football Premier League. Assisted in campaigns that increased fan engagement and expanded the league's digital presence."
-
+  "experience6Description": "Contributed to marketing initiatives for the Russian Football Premier League. Assisted in campaigns that increased fan engagement and expanded the league's digital presence.",
+  "welcomeMessage": "Welcome to george_tbs guides!"
 }
